--- a/index.html
+++ b/index.html
@@ -124,7 +124,10 @@
 <!--Second box-->
 
 <div class="second-box">
-    <div class="chamber-one-secondbox"></div>
+    <div class="wixy">Wix er enkelt i bruk og har stor funksjonalitet. Ideelt for små bedrifter og nettbutikker.</div>
+    <div class="chamber-one-secondbox">
+        
+    </div>
     <div class="chamber-two-secondbox"></div>
     <div class="chamber-three-secondbox"></div>
     <div class="chamber-four-secondbox">
