--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <!--First box-->
 
     <div class="first-box">
-        <div class="wixy">Wix er enkelt i bruk og har stor funksjonalitet. Ideelt for små bedrifter og nettbutikker.</div>
+        <div class="border-text">Wix er ideelt for små bedrifter og nettbutikker</div>
         <div class="chamber-one">
 
           <div class="rangering">#1</div>
@@ -124,7 +124,7 @@
 <!--Second box-->
 
 <div class="second-box">
-    <div class="wixy">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos, illo.</div>
+    <div class="border-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos, illo.</div>
     <div class="chamber-one-secondbox">
         <div class="rangering">#2</div>
         <img src="" class="logo" alt="logo">
@@ -210,7 +210,7 @@
 <!--Third box-->
 
 <div class="third-box">
-    <div class="wixy">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos, illo.</div>
+    <div class="border-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos, illo.</div>
     <div class="chamber-one-thirdbox">
 
         <div class="rangering">#3</div>
@@ -295,7 +295,7 @@
 <!--Fourth box-->
 
 <div class="fourth-box">
-    <div class="wixy">Wix er enkelt i bruk og har stor funksjonalitet. Ideelt for små bedrifter og nettbutikker.</div>
+    <div class="border-text">Wix er enkelt i bruk og har stor funksjonalitet. Ideelt for små bedrifter og nettbutikker.</div>
     <div class="chamber-one-fourthbox">
         <div class="rangering">#2</div>
         <img src="" class="logo" alt="logo">
@@ -377,7 +377,7 @@
 <!--Fift box-->
 
 <div class="fift-box">    
-    <div class="wixy">Wix er enkelt i bruk og har stor funksjonalitet. Ideelt for små bedrifter og nettbutikker.</div>
+    <div class="border-text">Wix er enkelt i bruk og har stor funksjonalitet. Ideelt for små bedrifter og nettbutikker.</div>
     <div class="chamber-one-fiftbox">
         <div class="rangering">#2</div>
         <img src="" class="logo" alt="logo">
