--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 
     <div class="ikoner"><i class="fab fa-instagram-square"></i><i class="fab fa-facebook"></i><i class="fab fa-twitter-square"></i><i class="fab fa-pinterest"></i></div>
-    <h2 class="headline-over-boxes">Top List 2020</h2>
+   
     
 <!--Navigation box-->
 
@@ -56,6 +56,7 @@
 <!--First box-->
 
     <div class="first-box">
+        <h2 class="testo">TOP WEBSITE BUILDERS 2020</h2>
         <div class="border-text">Wix er ideelt for små bedrifter og nettbutikker</div>
         <div class="chamber-one">
 
